Fix - vertical scrollbar on FF - pick front

--- a/src/assets/css/common.less
+++ b/src/assets/css/common.less
@@ -24,7 +24,7 @@
                 height: 200px;
                 width: 200px;
             }
-            .text{
+            .text {
                 width: 200px;
                 text-align: center;
                 padding-top: 5px;
@@ -81,12 +81,19 @@
                     height: 150px;
                     width: 150px;
                 }
-                .text{
-                width: 150px;
-                text-align: center;
-                padding-top: 3px;
-                font-size: 1.5em;
+                .text {
+                    width: 150px;
+                    text-align: center;
+                    padding-top: 3px;
+                    font-size: 1.5em;
+                }
             }
+            .productTableInfo {
+                .table-wrapper {
+                    td {
+                        padding: .45em 1.5em;
+                    }
+                }
             }
         }
     }
